--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/85fcce98c0.js" crossorigin="anonymous"></script>
-    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
-  <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+    <link href="/netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
+  <link href="/netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 
     <title>#home#</title>
 </head>
@@ -94,23 +94,26 @@
                       <div class="row">
 
                         <div class="col-md">
-                          <a href="" id="totalUsers"><img src="C:\Users\Administrator\Documents\LiMS\totalUsers.jpg" alt=""></a><br><h4 class="text-right text-danger">Total Users</h4>
+                          <a href="" id="totalUsers" style="text-decoration: none;"><img src="/opt/lampp/htdocs/LiMS/LiMS_/totalUsers.jpg" alt=""><h4 class="text-end text-danger">Total Users</h4></a>
                         </div>
 
                         <div class="col-md">
-                          <a href="" id="teachingStaff"><img src="C:\Users\Administrator\Documents\LiMS\teachingStaff.jpg" alt=""></a><br><h4 class="text-right text-danger">Teaching Staff</h4>
+                          <a href="" id="teachingStaff" style="text-decoration: none;"><img src="/opt/lampp/htdocs/LiMS/LiMS_/teachingStaff.jpg" alt=""><h4 class="text-end text-danger">Teaching Staff</h4></a>
                         </div>
 
                         <div class="col-md">
-                          <a href="" id="students"><img src="C:\Users\Administrator\Documents\LiMS\students.jpg" alt=""></a><br><h4 class="text-right text-danger">Total Students</h4>
+                          <a href="" id="students" style="text-decoration: none;"><img src="/opt/lampp/htdocs/LiMS/LiMS_/students.jpg" alt=""><h4 class="text-end text-danger">Total Students</h4></a>
                         </div>
                       </div><br><br>
 
                       <div class="row">
 
-                        <div class="col-md"><a href="" id="nonTeachingstaff"><img src="C:\Users\Administrator\Documents\LiMS\nonTeachingStaff.jpg" alt=""></a><br><h4 class="text-justify text-danger">Non Teaching Staff</h4></div>
+                        <div class="col-md">
+                          <a href="" id="nonTeachingstaff"><img src="/opt/lampp/htdocs/LiMS/LiMS_/nonTeachingStaff.jpg" alt=""><h4 class="text-end text-danger">Non Teaching Staff</h4></a>
+                        </div>
 
-                        <div class="col-md"><a href="" id="parents"><img src="C:\Users\Administrator\Documents\LiMS\parents.jpg" alt=""></a><br><h4 class="text-center text-danger">Parents</h4></div>
+                        <div class="col-md"><a href="" id="parents">
+                          <a href="" style="text-decoration: none;"><img src="/opt/lampp/htdocs/LiMS/LiMS_/parents.jpg" alt=""><h4 class="text-end text-danger">Parents</h4></a></div>
                       </div>
                     </div>
                    </section>
